<resources>
    <string name="app_name">Test Online Shop</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="hot_sales">Hot sales</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="buy_now">Buy now!</string>
    <string name="qr_action">QR action</string>
    <string name="filter_image_view">Filter image view</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>
    <string name="back_button">back button</string>
    <string name="is_favorite_or_not">is favorite or not</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart_price">Add to Cart $price</string>
    <string name="features">Features</string>
    <string name="details">Details</string>
    <string name="shop">Shop</string>
    <string name="processor">processor</string>
    <string name="camera">camera</string>
    <string name="memory">memory</string>
    <string name="capacity">capacity</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="_256_gb">256 gb</string>
    <string name="_128_gb">128 gb</string>
    <string name="inet_is_not_available">"Sorry, internet is not available now, please, check your internet connection and try again"</string>
    <string name="internet_error">Internet error</string>
    <string name="pictures_of_products">pictures of products</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My cart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="moscow_russia">Moscow, Russia</string>
    <string name="server_error">Sorry, something went wrong, please, check your internet connection and try again</string>
    <string name="filter_options">Filter options</string>
    <string name="new_">New</string>
    <string-array name="phones_models_string_array">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
        <item>Apple</item>
        <item>Not chosen</item>
    </string-array>
    <string-array name="phones_sizes_string_array">
        <item>5 to 5.3 inches</item>
        <item>5.3 to 5.6 inches</item>
        <item>5.6 to 5.9 inches</item>
        <item>5.9 to 6.3 inches</item>
        <item>Not chosen</item>
    </string-array>
    <string-array name="phones_prices_string_array">
        <item>$0 - $300</item>
        <item>$300 - $500</item>
        <item>$500 - $1000</item>
        <item>$1000 - $3000</item>
        <item>$3000 - $5000</item>
        <item>Not chosen</item>
    </string-array>
</resources>