<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/explorerItemBottomBar"
        android:enabled="true"
        android:icon="@drawable/ic_brightness"
        android:title="@string/explorer"
        />

    <item
        android:id="@+id/cartItemBottomBar"
        android:enabled="true"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        />

    <item
        android:id="@+id/favoriteItemBottomBar"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"
        />

    <item
        android:id="@+id/profileItemBottomBar"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        />


</menu>