<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/processorImageView"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_processor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toEndOf="@id/processorImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/memoryImageView"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_baseline_closed_caption_off_24"
        app:layout_constraintStart_toEndOf="@id/cameraImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/capacityImageView"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_capacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/memoryImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/processorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processor"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/processorImageView"
        app:layout_constraintStart_toStartOf="@id/processorImageView"
        app:layout_constraintTop_toBottomOf="@id/processorImageView" />

    <TextView
        android:id="@+id/cameraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/cameraImageView"
        app:layout_constraintStart_toStartOf="@id/cameraImageView"
        app:layout_constraintTop_toBottomOf="@id/cameraImageView" />

    <TextView
        android:id="@+id/memoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/memoryImageView"
        app:layout_constraintStart_toStartOf="@id/memoryImageView"
        app:layout_constraintTop_toBottomOf="@id/memoryImageView" />

    <TextView
        android:id="@+id/capacityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capacity"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/capacityImageView"
        app:layout_constraintStart_toStartOf="@id/capacityImageView"
        app:layout_constraintTop_toBottomOf="@id/capacityImageView" />

    <TextView
        android:id="@+id/selectColorAndCapacityTextView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_color_and_capacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/processorTextView" />

    <Button
        android:id="@+id/colorOneActionButton"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_check"
        app:cornerRadius="24sp"
        app:icon="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectColorAndCapacityTextView"
        />

    <Button
        android:id="@+id/colorTwoActionButton"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:cornerRadius="24sp"
        app:fabCustomSize="36dp"
        app:layout_constraintStart_toEndOf="@id/colorOneActionButton"
        app:layout_constraintTop_toBottomOf="@id/selectColorAndCapacityTextView" />

    <Button
        android:id="@+id/capacityFirstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/_128_gb"
        app:cornerRadius="12sp"
        app:layout_constraintEnd_toStartOf="@id/capacitySecondButton"
        app:layout_constraintTop_toBottomOf="@id/selectColorAndCapacityTextView" />

    <Button
        android:id="@+id/capacitySecondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/_256_gb"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:backgroundTint="@color/white"
        app:cornerRadius="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectColorAndCapacityTextView" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="619dp"
        android:text="@string/add_to_cart_price"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="8sp"
        app:layout_constraintTop_toBottomOf="@+id/capacityFirstButton"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>