<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">


        <Button
            android:id="@+id/doneBottomDialogButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:clickable="true"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/white" />

        <TextView
            android:id="@+id/filterOptionsTextView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Filter options"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/brandBottomDialogTextView"
            app:layout_constraintEnd_toStartOf="@+id/doneBottomDialogButton"
            app:layout_constraintStart_toEndOf="@+id/backFloatingActionButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_cancel"
            app:fabCustomSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="32sp"
            app:rippleColor="@color/white" />

        <TextView
            android:id="@+id/brandBottomDialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doneBottomDialogButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brandDropdownMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/brandBottomDialogTextView">

            <AutoCompleteTextView
                android:id="@+id/brandAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="none"
                android:textEditSuggestionItemLayout="@layout/item_menu_layout"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/priceBottomDialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brandDropdownMenu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceDropdownMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/priceBottomDialogTextView">

            <AutoCompleteTextView
                android:id="@+id/priceAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="none"
                android:textEditSuggestionItemLayout="@layout/item_menu_layout"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sizeBottomDialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceDropdownMenu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sizeDropdownMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeBottomDialogTextView">

            <AutoCompleteTextView
                android:id="@+id/sizeAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="none"
                android:textEditSuggestionItemLayout="@layout/item_menu_layout"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>